Fixing Spacing

--- a/src/app/window_format/window-center/window-center.component.css
+++ b/src/app/window_format/window-center/window-center.component.css
@@ -1,10 +1,11 @@
 .window {
   display: flex;
   flex-direction: column;
-  width: 180rem;
+  margin-left: 400px;
   background-color: #212529;
-  max-height: 98vh; /* Set the maximum height to the height of the viewport */
-  overflow-y: auto; /* Enable vertical scrolling if content overflows */
+  max-height: 100vh; /* Set the maximum height to the height of the viewport */
+  overflow-y: clip; /* Enable vertical scrolling if content overflows */
+  overflow-x: clip;
 }
 
 .header {
@@ -14,23 +15,27 @@
 
 .container {
   display: flex;
-  max-height: 98vh;
-  width: 100rem;
+  max-height: 85vh;
+  overflow-y: clip;
+  /* Don't add overflow-x, it will clip the folder sidebar */
   background-color: #0cf151;
 }
 
 .sidebar {
   background-color: rgb(196, 4, 255); /* Change this to your desired sidebar color */
-  margin-left: -200px;
-  width: 100px; /* Set a fixed width for the sidebar */
+  margin-left: 0px;
+  width: 90px; /* Set a fixed width for the sidebar */
   flex-wrap: wrap;
+  max-height: 85vh;
+  overflow-y: clip;
+  /* Don't add overflow-x, it will clip the folder sidebar */
 }
 
 .main-content {
-  width: 150%;
-  height:71.5rem;
-  padding-left: 60px;
+  width: 100%;
+  max-height: 85vh;
+  overflow-y: clip;
+  overflow-x: clip;
   flex-wrap: wrap;
-  margin-top: 0cap;
   background-color: #eaff2a;
 }
